[gd_scene load_steps=3 format=3 uid="uid://c51vyn54bk7q4"]

[ext_resource type="Script" path="res://src/ui_components/visual_calendar/visual_calendar.gd" id="2_7vx37"]
[ext_resource type="PackedScene" uid="uid://dv6e6h4lw1bqy" path="res://src/ui_components/visual_calendar/match_list/match_list.tscn" id="3_cy82g"]

[node name="VisualCalendar" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_7vx37")

[node name="Calendar" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
alignment = 1

[node name="Paginator" type="HBoxContainer" parent="Calendar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 30
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Prev" type="Button" parent="Calendar/Paginator"]
layout_mode = 2
text = "<"

[node name="Page" type="Label" parent="Calendar/Paginator"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "wewe"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Calendar/Paginator"]
layout_mode = 2
text = ">"

[node name="Today" type="Button" parent="Calendar/Paginator"]
layout_mode = 2
text = "TODAY"

[node name="Days" type="GridContainer" parent="Calendar"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 7

[node name="Monday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "MONDAY"
horizontal_alignment = 1

[node name="Tuesday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "TUESDAY"
horizontal_alignment = 1

[node name="Wednesday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "WEDNESDAY
"
horizontal_alignment = 1

[node name="Thursday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "THURSDAY"
horizontal_alignment = 1

[node name="Friday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "FRIDAY"
horizontal_alignment = 1

[node name="Saturday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SATURDAY"
horizontal_alignment = 1

[node name="Sunday" type="Label" parent="Calendar/Days"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SUNDAY"
horizontal_alignment = 1

[node name="MatchList" parent="." instance=ExtResource("3_cy82g")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[connection signal="pressed" from="Calendar/Paginator/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Calendar/Paginator/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Calendar/Paginator/Today" to="." method="_on_today_pressed"]
